eks-sre-reliability-lab/apps/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: apps
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: catalog-api
  namespace: apps
spec:
  selector:
    app: catalog-api
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: checkout-api
  namespace: apps
spec:
  selector:
    app: checkout-api
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
